fix: add link for login logo and adjust spacing

--- a/css/style.css
+++ b/css/style.css
@@ -837,7 +837,7 @@
 
 .login__grid {
     display: grid;
-    gap: 4.8rem;
+    gap: 3.6rem;
 }
 
 .login__logo {
@@ -872,7 +872,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 1.2rem;
+    gap: 0.8rem;
 }
 
 .login__box label {
